# promptly

./: .gitignore  Cargo.toml  README.md  output.txt
config/: default.json  default.yaml
corpora/: default.txt
src/: logger.rs  main.rs
src/cli/: args.rs  mod.rs
src/config/: mod.rs  settings.rs
src/corpus/: loader.rs  mod.rs
src/markov/: builder.rs  chain.rs  interner.rs  mod.rs
src/model/: mod.rs  persistence.rs
